# irt_azhar

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: qp_solver_options.cmake.in
include/: KBETA.txt  KGAMMA.txt  NBETA.txt  NGAMMA.txt  XBETA.txt  XFN.txt  XFN_old.txt  XGAMMA.txt  YBETA.txt  YGAMMA.txt  params_ferry_ferry.mat
include/ipopt/: ipopt_interface.hpp  nlproblem.hpp
include/mpc_wrapper/: MpcSolver.h  SqpSolver.h
include/qp_solver_collection/: QpSolverCollection.h  QpSolverOptions.h.in
src/: CMakeLists.txt  MpcSolver.cpp  QpSolverCollection.cpp  QpSolverIpopt.cpp  QpSolverOsqp.cpp
tests/: CMakeLists.txt  SampleMPC.cpp  SampleMPC2.cpp  SampleQP.cpp  debug.cpp  ipopt_test.cpp  nmpc.cpp  nmpc2.cpp  sample_sqp.cpp  sample_sqp2.cpp  sample_sqp3.cpp
